Issue #1473: Fix erroneous fieldset min-width and allow wrapping in titles.

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.InputFields.css
@@ -295,6 +295,10 @@ label.oooFocus.LabelError {
     align-items: end;
 }
 
+.oooTitle > p {
+    white-space: normal;
+}
+
 /* IE */
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
