--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Reset.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Reset.css
@@ -58,6 +58,10 @@ body {
     padding: 0;
 }
 
+fieldset {
+    min-width: 0;
+}
+
 ol, ul {
     list-style: none;
 }
